# regulate-ie

./: .env.example  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: python-app.yml
src/casino_reg_ie/: main.py
src/casino_reg_ie/core/: logging.py
