[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "regulate-ie"
version = "0.0.3"
description = "API for regulations on gambling in Ireland"
authors = [{name = "dofahy"}]
requires-python = ">=3.13"
readme = "README.md"
license = "MIT"
dependencies = [
    "flask",
    "sqlalchemy",
    "psycopg2-binary",
    "python-dotenv",
    "python-json-logger"
]

[project.optional-dependencies]
dev = [
  #"coverage",
  #"fakeredis",
  #"freezegun",
  #"mypy",
  "pytest",
  "pytest-cov",
  "pytest-mock",
  "python-lsp-ruff",
  "ruff",
  "pre-commit",
  "ipdb"
]

[project.scripts]
regulate-ie = "regulate_ie.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "--cov=regulate_ie --cov-report=term-missing"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
  #"ASYNC",
  "B",
  "C4",
  #"D",
  #"DTZ",
  "E",
  "F",
  #"FURB",
  "G",
  "I",
  "ISC001",
  "ISC002",
  "LOG",
  "PGH",
  "PIE",
  "PT",
  #"PYI",
  "RET",
  #"T20",
  "UP",
  "W"
]
ignore = [
  "B009", # Do not call getattr with a constant value
  "B010", # Do not call setattr with a constant value
  #"B023", # Function definition does not bind loop variable
  "D100", # Missing docstring in public module
  "D101", # Missing docstring in public class
  "D102", # Missing docstring in public method
  "D103", # Missing docstring in public function
  "D104", # Missing docstring in public package
  "D105", # Missing docstring in magic method
  "D106", # Missing docstring in public nested class
  "D107", # Missing docstring in __init__
  "D202", # No blank lines allowed after function docstring
  "D203", # 1 blank line required before class docstring
  "D206", # Docstring should be indented with spaces, not tabs
  "D213", # Multi-line docstring summary should start at the second line
  "D407", # Missing dashed underline after section
  "E501", # Line too long
  "PT019", # Fixture without value is injected as parameter, use @pytest.mark.usefixtures instead
  "PYI041", # Use `float` instead of `int | float`
  #"RET504", # Unnecessary assignment before return statement
  "UP046" # Parameter syntax for generic classes; not supported by mypy: https://github.com/python/mypy/issues/18507
]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.isort]
known-first-party = ["regulate_ie"]
